--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,18 @@
 /training/
+/part1/1.10/frontend-example-docker
+/part1/1.11/backend-example-docker
+/part1/1.13/spring-example-project
+/part1/1.14/rails-example-project
+/part1/1.15/
+/part1/1.16/
+/part2/2.4/scaling-exercise
+/part2/2.7/ml-kurkkumopo-backend
+/part2/2.7/ml-kurkkumopo-frontend
+/part2/2.7/ml-kurkkumopo-training
+/part2/2.9/postgresdb
+/part3/3.1/backend/backend-example-docker
+/part3/3.1/frontend/frontend-example-docker
+/part3/3.2/yle-dl
+/part3/3.3/backend/backend-example-docker
+/part3/3.3/frontend/frontend-example-docker
+/part3/3.6/rails-example-project
